--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Primer Ejercicio</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h5><a href="./estructurales.html">Pagina 2</a></h5>
+        </nav>
+    </header>
     <!--Titulo Principal-->
     <h1>Mi Presentacion:</h1>
     <!--Imagen-->
