--- a/estructurales.html
+++ b/estructurales.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-
+            <h5><a href="./index.html">Pagina 1</a></h5>
         </nav>
     </header>
     <main>
