--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             <li><strong>Correo</strong>: maxiargen98@gmail.com</li>
         </ul>
     </div>
+    <div>
+        <h3>Referencias.</h3>
+        <ul>
+            <li>Romina Tel: 351435855</li>
+            <li>Mariela Tel: 35145238</li>
+            <li>Gaston Tel: 35125662</li>
+            <li>Ivan Tel: 351266486</li>
+        </ul>
+    </div>
     <!--H3+Links-->
    <h3><a target="_blank" href="https://www.instagram.com/maxidriussi/?hl=es">Mi Instagram</a></h3>
    <!--Parrafo-->
