--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         </ul>
     </div>
     <div>
-        <h3>Experiencia Laboral</h3>
-        <ul>
-            <li>Viró Eventos.</li>
-            <li>Sofía Vinería</li>
-            <li>Hotel Neper</li>
-            <li>San Cayetano SRL</li>
-        </ul>
+    <h3>Experiencia Laboral</h3>
+    <ul>
+        <li>Viró Eventos.</li>
+        <li>Sofía Vinería</li>
+        <li>Hotel Neper</li>
+        <li>San Cayetano SRL</li>
+        <li>Mirá Silvina</li>
+    </ul>
     </div>
     <!--H3+Links-->
    <h3><a target="_blank" href="https://www.instagram.com/maxidriussi/?hl=es">Mi Instagram</a></h3>
