--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li>Mariela Tel: 35145238</li>
             <li>Gaston Tel: 35125662</li>
             <li>Ivan Tel: 351266486</li>
+            <li>Mariel Tel 35436585</li>
         </ul>
     </div>
     <!--H3+Links-->
