--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         </ul>
     </div>
     <div>
-        <h3>Experiencia Laboral</h3>
+        <h3>Experiencia Laboral.</h3>
         <ul>
             <li>Viró Eventos.</li>
             <li>Sofía Vinería</li>
             <li>Hotel Neper</li>
             <li>San Cayetano SRL</li>
             <li>Mirá Silvina</li>
-        </ul>     
+        </ul> 
+        <h3>Referencias.</h3>    
         <ul>
             <li>Romina Tel: 351435855</li>
             <li>Mariela Tel: 35145238</li>
